Add html for displaying the inspiration results.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="stack">	
+		<div class="stack">
 			<h3>Get Unanswered Questions</h3>
 			<p>Find unanswered questions by tag. For multiple tags, use a semi-colon to separate.</p>
 			<form class="unanswered-getter" onsubmit="return false;">
@@ -47,6 +47,16 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+        <dl class="result inspiration">
+            <dt>User</dt>
+                <dd class="display-name"></dd>
+            <dt>Reputation</dt>
+                <dd class="reputation"></dd>
+            <dt>Accept Rate</dt>
+                <dd class="accept-rate"></dd>
+            <dt>Profile</dt>
+                <dd class="profile"><a href="" target="_blank"></a></dd>
+        </dl>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
