Added profile images to the results.  Calling this done.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <dl class="result inspiration">
             <dt>User</dt>
                 <dd class="display-name"></dd>
+                <dd class="profile-image"></dd>
             <dt>Reputation</dt>
                 <dd class="reputation"></dd>
             <dt>Accept Rate</dt>
